[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="UpdateTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 2 )]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
